Se agrego las rutas y el vinculo de los templates

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,1 +1,16 @@
 <p>body works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <app-inputs></app-inputs>
+        </div>
+        <div class="col">
+            <app-resultado></app-resultado>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <app-botones></app-botones>
+        </div>
+    </div>
+</div>
