Se establecio y estructuro todas las vistas del SPA

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,15 +1,24 @@
-<p>body works!</p>
-<div class="container">
-    <div class="row">
+<!-- <p>body works!</p> -->
+
+<!-- se declara los templates de cada componente -->
+<div class="container mt-5 border border-dark">
+    <div class="row p-5 mx-auto border-bottom border-info bg-dark mt-2">
+        <!-- Titulo -->
+        <h2 class="text-center text-white">CALCULADORA BASICA</h2>
+    </div>
+    <div class="row mt-5">
         <div class="col">
+            <!-- template de inputs -->
             <app-inputs></app-inputs>
         </div>
         <div class="col">
+            <!-- template de resultado -->
             <app-resultado></app-resultado>
         </div>
     </div>
     <div class="row">
         <div class="col">
+            <!-- template de botones -->
             <app-botones></app-botones>
         </div>
     </div>
