--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+<!-- <p>navbar works!</p> -->
+<!-- navbar importado desde bootstrap -->
+<nav class="navbar bg-dark">
+    <div class="container-fluid ">
+      <a class="navbar-brand text-white" href="#">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png"  width="30" height="24" class="d-inline-block align-text-top">
+        Actividad Asincrona - Sesion 5 Angular
+      </a>
+    </div>
+</nav>
