--- a/src/app/components/body/botones/botones.component.html
+++ b/src/app/components/body/botones/botones.component.html
@@ -1,1 +1,22 @@
-<p>botones works!</p>
+<!-- <p>botones works!</p> -->
+
+<div class="container mt-4">
+    <div class="row mb-4">
+        <div class="col">
+            <button class="btn btn-primary" >+</button>
+            <!-- (click)="sumar()" -->
+        </div>
+        <div class="col">
+            <button class="btn btn-primary">-</button>
+            <!-- (click)="restar()" -->
+        </div>
+        <div class="col">
+            <button class="btn btn-primary">*</button>
+            <!-- (click)="multiplicar()" -->
+        </div>
+        <div class="col">
+            <button class="btn btn-primary">/</button>
+            <!-- (click)="dividir()" -->
+        </div>
+    </div>
+</div>
