--- a/src/app/components/body/inputs/inputs.component.html
+++ b/src/app/components/body/inputs/inputs.component.html
@@ -1,1 +1,22 @@
-<p>inputs works!</p>
+<!-- <p>inputs works!</p> -->
+
+<!-- inputs -->
+
+<div class="container">
+    <div class="row">
+        <h3 class="text-center">Ingrese dos valores:</h3>
+    </div>
+    <div class="row mt-4 text-center">
+        <div class="col-5">
+            <input class="border-bottom" type="number" placeholder="0" #txtn1>
+        </div>
+        <div class="col-2 text-center">
+            {{operador}}
+        </div>
+        <div class="col-5">
+            <input class="border-bottom" type="number" placeholder="0" #txtn2>
+        </div>
+    </div>
+</div>
+
+
