--- a/src/app/components/body/resultado/resultado.component.html
+++ b/src/app/components/body/resultado/resultado.component.html
@@ -1,1 +1,9 @@
-<p>resultado works!</p>
+<!-- <p>resultado works!</p> -->
+<div class="container">
+    <div class="row">
+        <h3 class="text-center">RESULTADO:</h3>
+    </div>
+    <div class="row mt-2 p-3 mb-2 bg-secondary border border-primary text-white">
+        <span>{{resultado}}</span>
+    </div>
+</div>
