se establece mueva estructura y se plantea el envio de datos del comp hijo al comp padre

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
 
 <!-- se invoca al componente header -->
 <app-header></app-header>
-
-<!-- se invoca mediante ruta a los conponentes del body -->
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+
+
+<!-- pruebas -->
+<!-- <input type="number" (ngModel)]="num">
+<button (click)="calcular()">calcular</button>
+<span>{{res}}</span> -->
+<!-- se invoca mediante ruta a los conponentes del body -->
