--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -7,19 +7,19 @@
         <h2 class="text-center text-white">CALCULADORA BASICA</h2>
     </div>
     <div class="row mt-5">
-        <div class="col">
-            <!-- template de inputs -->
+        <!-- <div class="col">
+            template de inputs
             <app-inputs></app-inputs>
-        </div>
+        </div> -->
         <div class="col">
             <!-- template de resultado -->
             <app-resultado></app-resultado>
         </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col">
-            <!-- template de botones -->
+            template de botones
             <app-botones></app-botones>
         </div>
-    </div>
+    </div> -->
 </div>
